# tax-chatter

./: .env.example  CLAUDE.md  README.md  main.py  pyproject.toml
config/: settings.py
data/chroma/: chroma.sqlite3
scripts/: ingest.py
src/: factory.py  models.py
src/application/: prompt_builder.py  router.py  session.py
src/ingestion/: chunker.py  loader.py  pipeline.py
src/interfaces/: base.py  telegram_adapter.py
src/llm/: base.py  gemini.py  local.py
src/rag/: engine.py
src/storage/: chroma_store.py  embedder.py  sentence_transformers.py  vector_store.py
tests/: conftest.py
tests/integration/: test_adapter_contract.py  test_factory.py  test_main_flow.py  test_rag_pipeline.py
tests/unit/: test_chroma_store.py  test_chunker.py  test_embedder_impl.py  test_ingest_cli.py  test_loader.py  test_ollama_provider.py  test_pipeline.py  test_prompt_builder.py  test_rag_engine.py  test_router.py  test_session.py  test_telegram_adapter.py
