[project]
name = "tax-llm"
version = "0.1.0"
description = "세무사용 RAG 기반 LLM 서비스"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.0",
    "chromadb>=0.5.0",
    "qdrant-client>=1.9.0",
    "sentence-transformers>=3.0.0",
    "python-telegram-bot>=21.0",
    "discord.py>=2.4.0",
    "pydantic-settings>=2.0.0",
    "pydantic>=2.0.0",
    "langchain-text-splitters>=0.2.0",
    "pypdf>=4.0.0",
    "httpx>=0.27.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "ragas>=0.1.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "eval: RAG 품질 평가 테스트 (실제 API 호출, 기본 실행에서 제외)",
    "integration: 통합 테스트",
]
addopts = "-m 'not eval'"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
